Finished second half of the backend I guess lmao
