# rails/app/models/game/box.rb
@@ -1,0 +1,6 @@
+module Game
+  class Box < GameObject
+    include Mixins::Storage
+    include Mixins::Movable
+  end
+end
