# rails/app/models/game/room.rb
@@ -1,0 +1,5 @@
+module Game
+  class Room < GameObject
+    include Mixins::Storage
+  end
+end
