# rails/app/models/user.rb
@@ -1,3 +1,5 @@
 class User < ApplicationRecord
-    has_secure_password
+  has_secure_password
+  has_and_belongs_to_many :roles, class_name: 'Game::Role', join_table: :roles_users, inverse_of: :users, autosave: true
+  
 end
