# rails/config/routes.rb
@@ -1,12 +1,15 @@
 Rails.application.routes.draw do
-    namespace :api do
-        namespace :v1 do
-            post 'session/refresh'
-            post 'users/authenticate'
-            post 'users/create'
-            get 'users/auto_login'
-        end
+  namespace :api do
+    namespace :v1 do
+      post 'session/refresh'
+      post 'users/authenticate'
+      post 'users/create'
+      get 'users/auto_login'
+      get 'game/roles'
+      get 'game/tree'
+      post 'game/act'
     end
-    root 'index#index', via: :all
-    match '*path', to: 'index#index', via: :all
+  end
+  root 'index#index', via: :all
+  match '*path', to: 'index#index', via: :all
 end
